--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -32,3 +32,4 @@
 \newacronym{asr}{ASR}{automatic speech recognition}
 \newacronym{sgd}{SGD}{stochastic gradient descent}
 \newacronym{tpu}{TPU}{tensor processing unit}
+\newacronym{axe}{AXE}{aligned cross-entropy}
