--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,4 +1,13 @@
 
+@article{joulin2016fasttext,
+  title={FastText.zip: Compressing text classification models},
+  author={Joulin, Armand and Grave, Edouard and Bojanowski, Piotr and Douze,
+                  Matthijs and J{\'e}gou, H{\'e}rve and Mikolov, Tomas},
+  journal={arXiv preprint arXiv:1612.03651},
+  year={2016}
+}
+
+
 @InProceedings{glorot2010understanding,
   title = 	 {Understanding the difficulty of training deep feedforward neural networks},
   author = 	 {Glorot, Xavier and Bengio, Yoshua},
