--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -281,14 +281,9 @@ I understand that my work relates to the rights and obligations
 \sloppy
 \include{01-intro}
 \include{02-nmt}
-%\include{03-context}
-%\include{04-mmt}
-\include{04-nonautoregressive}
-\include{05a-nmt-ctc}
+\include{03-nonautoregressive}
+\include{04-nmt-ctc}
 \include{05-experiments}
-%\include{05-architectures}
-%\include{06-analysis}
-%\include{07-conclusions}
 
 %
 % TEXT END
