--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -33,3 +33,6 @@
 \newacronym{sgd}{SGD}{stochastic gradient descent}
 \newacronym{tpu}{TPU}{tensor processing unit}
 \newacronym{axe}{AXE}{aligned cross-entropy}
+\newacronym{cmlm}{CMLM}{conditional masked language model}
+\newacronym{mlm}{MLM}{masked language model}
+\newacronym{xlm}{XLM}{cross-lingual language model}
