--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,12 @@
+@article{conneau-lample-2019-cross,
+  title={Cross-lingual language model pretraining},
+  author={Conneau, Alexis and Lample, Guillaume},
+  journal={Advances in Neural Information Processing Systems},
+  volume={32},
+  pages={7059--7069},
+  year={2019}
+}
+
 
 @article{joulin2016fasttext,
   title={FastText.zip: Compressing text classification models},
