--- a/thesis/05-experiments.tex
+++ b/thesis/05-experiments.tex
@@ -119,13 +119,15 @@ sentence pairs for training. Based on the score on the development data
 \JH{which?}, we select the 75\% highest-scoring sentence pairs from the crawled
 data. \JH{rephrase this a bit + add details about the models} The develoment
 scores achieved by the trained models are shown in Table
-\ref{tab:dual-cross-entropy-selection}.
+\ref{tab:dual-cross-entropy-selection}. \JH{Add the data sizes after this
+  cleaning step.}
 
 \begin{table}
   \centering
   \begin{tabular}{lrrrr}
     \toprule
-    & 25\% & 50\% & 75\% & 100\% \\
+    Percentage & 25\% & 50\% & 75\% & 100\% \\
+    No. of sentences & 21.9  & 43.9 & 66.5 & 87.7 \\
     \midrule
     En $\rightarrow$ De &  & 43.68 & 43.40 & 42.70 \\
     De $\rightarrow$ En & 41.47 & 41.64 & 42.15 & 42.02 \\
@@ -136,8 +138,6 @@ scores achieved by the trained models are shown in Table
   \label{tab:dual-cross-entropy-selection}
 \end{table}
 
-
-
 % \JH{The following is not true / old:}
 % We train our autoregressive models on a mix of the clean data and the
 % backtranslations. We use tagged-backtranslation and we oversample the clean
@@ -147,6 +147,44 @@ scores achieved by the trained models are shown in Table
 % the top 150 million. \JH{napsat jinak:} As the size of the clean data is 3.6
 % million sentence pairs, we oversample the dataset by a factor of 10 for the 100M
 % backtranslation version or 14 for the 150M backtranslation version.
+
+\paragraph{Backtranslation.} We train four translation models on the filtered
+parallel dataset for creating backtranslations
+\citep{sennrich-etal-2016-improving}. We use identical Transformer big
+hyper-parameter settings but we use different random seeds for parameter
+initialization. \JH{Say more about the models.}
+
+As the source of the monolingual data, we use the News Crawl datasets from
+years 2018, 2019, and 2020, as released by the \acs{wmt} organizers
+\citep{bojar-etal-2018-findings,barrault-etal-2019-findings,barrault-etal-2020-findings}. Table
+\ref{tab:mono-data-sizes} shows the sizes of the monolingual data before and
+after applying the rule-based filtering described in the paragraphs above.
+
+\begin{table}
+  \centering
+  \begin{tabular}{llrr}
+    \toprule
+    \multicolumn{2}{l}{Data source}  & Raw size  & Size after cleaning \\
+    \midrule
+    \multirow{3}{*}{English News Crawl} & 2018 & 18.11 & 17.90 \\
+                                     & 2019 & 33.60 & 32.80 \\
+                                     & 2020 & 41.43 & 40.33 \\
+    \multicolumn{1}{r}{total} & & 93.14 & 91.03 \\
+    \midrule
+    \multirow{3}{*}{German News Crawl} & 2018 & 38.65 & 37.42  \\
+                                     & 2019 & 57.62 & 56.33  \\
+                                     & 2020 & 53.67 & 52.46 \\
+    \multicolumn{1}{r}{total} & & 149.94 & 146.22 \\
+    \bottomrule
+  \end{tabular}
+
+  \caption{The sizes of the monolingual data (in millions of sentences) used
+    for the training, including rule-based data filtering}%
+  \label{tab:mono-data-sizes}
+\end{table}
+
+\JH{Paragraph about Tagged backtranslation. Refer to explanation in chapter
+  2. \citep{caswell-etal-2019-tagged}}
 
 
 %%% Local Variables:
